# metabuild-hackathon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  near_local.md  nft.sh  package-lock.json  package.json  requirements.txt  run.sh
contracts/aerx_content_nft/: Cargo.toml
contracts/aerx_content_nft/src/: charge.rs  counter.rs  lib.rs  nft_core.rs
contracts/aerx_nft/: Cargo.toml  README.md
contracts/aerx_nft/src/: counter.rs  lib.rs
contracts/aerx_post_nft/: Cargo.toml  README.md
contracts/aerx_post_nft/src/: lib.rs  nft.rs  profile.rs  token.rs
contracts/aerx_profile_nft/: Cargo.toml
contracts/aerx_profile_nft/src/: charge.rs  lib.rs
contracts/aex_token/: Cargo.toml  README.md
contracts/aex_token/src/: lib.rs
interfaces/: README.md
interfaces/crust_ipfs/: README.md  package.json
interfaces/crust_ipfs/src/: index.ts
interfaces/crust_ipfs/src/nearSign/: NearSign.ts  index.ts
nft/: README.md
res/: MetaBUILD.wasm  aerx-near-contracts.wasm  aerx_content_nft.wasm  aerx_near_contracts.wasm  aerx_nft.wasm  aerx_profile_nft.wasm  aex_content_nft.wasm  aex_token.wasm  approval_receiver.wasm  non_fungible_token.wasm  token_receiver.wasm
res/aex_icon/: aex_token_svg.html  mate_tiny.url
res/meta/: metadata_template.json  nft_contract_meta.ts  nft_token_meta.ts  profileNFT_meta.json
scripts/: meta2ipfs.py  meta2ipfs_local.py  utils.py
scripts/crust_nft/store-file/: README.md  package.json
scripts/crust_nft/store-file/src/: index.ts
scripts/crust_nft/store-file/src/nearSign/: NearSign.ts
test/: test_ipfs.py
test/test-token-receiver/src/: lib.rs
tests/: test_env.py  test_ipfs.py
