[package]
name = "MetaBUILD"
version = "0.0.1"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.1.1"

# remember to include a line for each contract
approval-receiver = { path = "./tests/test-approval-receiver" }
token-receiver = { path = "./tests/test-token-receiver" }
aerx-nft = { path = "./contracts/aerx_nft" }
aex-token = { path = "./contracts/aex_token" }
aerx-profile-nft = { path = "./contracts/aerx_profile_nft"}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "contracts/aerx_nft",
  "contracts/aex_token",
  "./contracts/aerx_profile_nft",
  "tests/test-approval-receiver",
  "tests/test-token-receiver",
]